# openbmc-proliant-support

./: README.md  meson.build
include/: uefi.h
service_files/: com.hpe.hpe-uefi-version.service
src/: hpe-publish-uefi-version  hpe-uefi-version.cpp  uefi.cpp
